# food-price-inflation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  requirements.in
ingestion/: config.py  dbdata.py  ingest.py  schema.sql  wds_data.py
notebooks/: 00-build_wds_module.ipynb  01-build_wds_module.ipynb  02-build_tables.ipynb  03-analysis.ipynb
statcan_wds/: README.md  __init__.py  _core.py  pyproject.toml
statcan_wds/statcan_wds.egg-info/: PKG-INFO  SOURCES.txt
