[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statcan_wds"
version = "0.1.0"
description = "Helper library for retrieving StatCan data via the Web Data Service API"
authors = [
    { name = "cdngouma" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "numpy>=1.23.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["statcan_wds*"]
